<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="#B2C5F2"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_item"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <!-- ImageView to display a thumbnail for PDFs -->
<!--        <ImageView-->
<!--            android:id="@+id/pdfThumbnail"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:src="@drawable/pic"-->
<!--            android:layout_marginBottom="20dp"/>-->



        <TextView
            android:id="@+id/pdf_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/pdf_UP"
            />






        <!-- EditText for title -->
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_g"
            android:inputType="text"
            android:padding="20dp"
            android:layout_marginBottom="10dp"/>

        <!-- EditText for subtitle -->
        <EditText
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle_g"
            android:inputType="text"
            android:padding="20dp"
            android:layout_marginBottom="10dp"/>

        <!-- Button to select PDF -->
        <Button
            android:id="@+id/selectPdfButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_pdf_g"/>

        <!-- Update Button -->
        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_g"/>

    </LinearLayout>

    <!-- ProgressBar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>