<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#F8BBD0"
android:orientation="vertical"
android:padding="18dp"
android:gravity="center">


<TextView
    android:id="@+id/tv_register_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:text="@string/admin_login"
    android:textColor="@android:color/black"
    android:textSize="28sp"
    android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="#FFE0B2"
        android:orientation="vertical"

        android:padding="20dp">



<EditText
    android:id="@+id/et_register_username"
    android:layout_width="325dp"
    android:layout_height="wrap_content"
    android:hint="@string/Username"
    android:inputType="text"
    android:padding="12dp"
    android:layout_marginBottom="16dp"
    android:background="@android:drawable/edit_text"
    android:autofillHints="Username" />




<EditText
    android:id="@+id/et_register_password"
    android:layout_width="325dp"
    android:layout_height="wrap_content"
    android:hint="@string/passwordRegister"
    android:inputType="textPassword"
    android:padding="12dp"
    android:layout_marginBottom="16dp"
    android:background="@android:drawable/edit_text"
    android:autofillHints="password" />




<Button
    android:id="@+id/btn_signRegister"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:padding="12dp"
    android:text="@string/signRegister"

    />
    </LinearLayout>

</LinearLayout>